--- a/data/articles/Frontend-developer-career-path:-A-guide-to-landing-your-first-job.mdx
+++ b/data/articles/Frontend-developer-career-path:-A-guide-to-landing-your-first-job.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Frontend Developer Career Path: A Guide to Landing Your First Job'
+title: 'Frontend Developer Career Path: How I Got My First Dev Job'
 publishedAt: '2023-02-14'
 excerpt: 'Balancing Learning with Work, Family, and Life: Resources for Aspiring Developers'
-cover_image: '/posts/GettingHired.avif'
+cover_image: '/posts/Roadmap.png'
 ---
 
 It's been quite a journey. Initially considering a path in law after high school, I found myself working in a hi-fi/record store for 14 years. While enjoyable I wanted something else, something I've been passionate about all my life: computers.<br /><br />
