--- a/data/articles/NextJs-css-styling.mdx
+++ b/data/articles/NextJs-css-styling.mdx
@@ -2,7 +2,7 @@
 title: 'Next.js CSS Styling: Combining Global & Module Styles'
 publishedAt: '2023-02-11'
 excerpt: ''
-cover_image: '/posts/Roadmap.png'
+cover_image: '/posts/NextCss.png'
 ---
 
 When optimizing your NextJS website for search engines, seamlessly integrating global and module CSS styles is essential. Here's how to achieve it without relying on additional packages.
@@ -32,5 +32,3 @@ To combine global and module styles for a specific element, follow either of the
 ```js
 <div className={['left', styles.right].join(' ')}></div>
 ```
-
-By seamlessly integrating global and module CSS styles in NextJS, you enhance the SEO performance of your website without the need for additional dependencies.
