--- a/src/data/articles/Frontend-developer-career-path:-A-guide-to-landing-your-first-job.mdx
+++ b/src/data/articles/Frontend-developer-career-path:-A-guide-to-landing-your-first-job.mdx
@@ -27,7 +27,7 @@ Books serve as another valuable learning resource. Similar to podcasts, I'm not 
 - "Computer Science Distilled" by Wladston Ferreira Filho
 - "JavaScript Enlightenment" by Cody Lindley<br /><br />
 
-During my learning journey, I stumbled upon an excellent resource called [StackUp](https://app.stackup.dev/), which not only facilitates learning but also offers monetary rewards. It's an innovative platform where completing coding challenges earns you a few dollars. While it may not make you wealthy, the real advantage lies in the feeling of being compensated for your coding efforts. The challenges are generally straightforward, involving tasks like answering questions or making slight modifications to code snippets. Web3 content tends to offer the best payouts.<br /><br />
+During my learning journey, I stumbled upon an excellent resource called [StackUp](https://stackup.dev/), which not only facilitates learning but also offers monetary rewards. It's an innovative platform where completing coding challenges earns you a few dollars. While it may not make you wealthy, the real advantage lies in the feeling of being compensated for your coding efforts. The challenges are generally straightforward, involving tasks like answering questions or making slight modifications to code snippets. Web3 content tends to offer the best payouts.<br /><br />
 
 Additionally, a significant portion of my learning took place on YouTube. While YouTube offers a vast array of educational content, it can be challenging to find structured learning paths. Nonetheless, I found several valuable subscriptions, including [Net Ninja](https://www.youtube.com/c/TheNetNinja), [Web Dev Simplified](https://www.youtube.com/c/WebDevSimplified), [James Q Quick](https://www.youtube.com/c/JamesQQuick), and [Codevolution](https://www.youtube.com/c/Codevolution). Codevolution, in particular, offers excellent video series tailored for beginners, which I highly recommend. It was through these resources that I gained proficiency in Next.js, a React framework utilized in many of my projects, but more on those later.<br /><br />
 
